# uptime_robot

./: .gitignore  celerybeat-schedule  docker-compose.yml  dockerfile  gitignore  pyproject.toml  read.me
config/: settings.py  urls.py
config/settings/: __init__.py  apps.py  base.py  databases.py
core/: admin.py  models.py  services.py  tasks.py  views.py
core/migrations/: 0001_initial.py  0002_report_website.py
